--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,6 @@
 
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Joann Vuong <130@holbertonschool.com>
+Ismail Oumouss <oumouss.ismail5@gmail.com>
+Salma el maimouni <Salma.elmaimouni@gmail.com>
